--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,7 @@ Maintainer: Markus Schade <markus.schade@gmail.com>
 Build-Depends: debhelper (>= 8), dpkg-dev (>= 1.16.1~), autotools-dev, libssl-dev, dh-systemd
 Standards-Version: 3.9.5
 Homepage: http://www.yadifa.eu
+Vcs-Git: https://github.com/asciiprod/yadifa.git
 
 Package: yadifa
 Architecture: any
