--- a/debian/rules
+++ b/debian/rules
@@ -12,6 +12,9 @@ include /usr/share/dpkg/buildflags.mk
 %:
 	dh $@  --with autotools-dev
 
+override_dh_clean:
+	rm -f debian/substvars
+
 override_dh_auto_configure:
 	./configure --prefix=/usr \
 		--sysconfdir=/etc/yadifa \
@@ -19,4 +22,8 @@ override_dh_auto_configure:
 		--enable-shared \
 		--enable-static \
 		--with-gnu-ld
+
+override_binary-indep:
+	for i in $$(sed -n '/^Package:/s/^.* //p' debian/control); do cat debian/vars.in >> debian/$$i.substvars; done
+	cat debian/vars.in >> debian/substvars
 
