--- a/debian/rules
+++ b/debian/rules
@@ -27,5 +27,5 @@ override_dh_auto_configure:
 override_dh_gencontrol:
 	for i in $$(sed -n '/^Package:/s/^.* //p' debian/control); do cat debian/vars.in >> debian/$$i.substvars; done
 	cat debian/vars.in >> debian/substvars
-	dh_gencontrol -i
+	dh_gencontrol
 
