--- a/debian/rules
+++ b/debian/rules
@@ -24,6 +24,9 @@ override_dh_auto_configure:
 		--enable-static \
 		--with-gnu-ld
 
+override_dh_installinit:
+	dh_installinit -a --no-start
+
 override_dh_gencontrol:
 	for i in $$(sed -n '/^Package:/s/^.* //p' debian/control); do cat debian/vars.in >> debian/$$i.substvars; done
 	cat debian/vars.in >> debian/substvars
