--- a/debian/rules
+++ b/debian/rules
@@ -10,7 +10,7 @@ DPKG_EXPORT_BUILDFLAGS = 1
 include /usr/share/dpkg/buildflags.mk
 
 %:
-	dh $@  --with autotools-dev --enable-rrl
+	dh $@  --with autotools-dev --enable-rrl --enable-nsid --with-tools --enable-ctrl
 
 override_dh_clean:
 	dh_clean
