install new yadifa control tool change default config to pidfile instead of pidpath install new lib for dev package

--- a/debian/yadifad.conf
+++ b/debian/yadifad.conf
@@ -9,14 +9,14 @@
         # Jail the application
         chroot                      off
 
-	# The path of the chroot dir, all further paths are relative to this, if chroot is set to on
-	chroot_path		    "/var/lib/yadifa"
+        # The path of the chroot dir, all further paths are relative to this, if chroot is set to on
+        chroot_path                 "/var/lib/yadifa"
  
         # The path where all the log files will be written
         logpath                     "/var/log/yadifa"
 
-        # The path where the pid file will be written
-        pidpath                     "/var/run/yadifa"    
+        # The location of the pid file
+        pidfile                     "/run/yadifad.pid"
 
         # The path where all zone files will be written
         datapath                    "/var/lib/yadifa"
@@ -28,10 +28,11 @@
         xfrpath                     "/var/lib/yadifa/xfr"
 
         # The version returned by a query to version.yadifa. CH TXT
-        version                     "1.0.3"
+        version                     "2.0.0"
 
-        # Set the maximum UDP packet size.  Cannot be less than 512.  Cannot be more than 65535.  Typical choice is 4096.
-        #edns0-max-size              4096
+        # Set the maximum UDP packet size.  Cannot be less than 512.  Cannot be
+        # more than 65535.  Typical choice is 4096.
+        edns0-max-size              4096
 
         # The maximum number of parallel TCP queries.
 
@@ -57,11 +58,11 @@
 
 
         # Drop queries with erroneous content
-        # answer-formerr-packets    on
+        answer-formerr-packets    off
 
         # Maximum number of records in an AXFR packet.  Set to one for compatibility
         # with very old name servers
-        # axfr-maxrecordbypacket    0
+        axfr-maxrecordbypacket    0
 
         # Global Access Controlrules.
         #
