datapath needs to be writable by daemon pidfile has its own subdir

--- a/debian/yadifad.conf
+++ b/debian/yadifad.conf
@@ -16,7 +16,7 @@
         logpath                     "/var/log/yadifa"
 
         # The location of the pid file
-        pidfile                     "/run/yadifad.pid"
+        pidfile                     "/var/run/yadifa/yadifad.pid"
 
         # The path where all zone files will be written
         datapath                    "/var/lib/yadifa"
