--- a/debian/rules
+++ b/debian/rules
@@ -6,8 +6,8 @@
 # This has to be exported to make some magic below work.
 export DH_OPTIONS
 
-DPKG_EXPORT_BUILDFLAGS = 1
-include /usr/share/dpkg/buildflags.mk
+#DPKG_EXPORT_BUILDFLAGS = 1
+#include /usr/share/dpkg/buildflags.mk
 
 %:
 	dh $@  --with autotools-dev
