update default config to version 2.0.5

--- a/debian/yadifad.conf
+++ b/debian/yadifad.conf
@@ -28,7 +28,7 @@
         xfrpath                     "/var/lib/yadifa/xfr"
 
         # The version returned by a query to version.yadifa. CH TXT
-        version                     "2.0.0"
+        version                     "2.0.5"
 
         # Set the maximum UDP packet size.  Cannot be less than 512.  Cannot be
         # more than 65535.  Typical choice is 4096.
@@ -60,7 +60,7 @@
         # Drop queries with erroneous content
         answer-formerr-packets    off
 
-        # Maximum number of records in an AXFR packet.  Set to one for compatibility
+        # Maximum number of records in an AXFR packet.  Set to 1 for compatibility
         # with very old name servers
         axfr-maxrecordbypacket    0
 
