--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,8 @@ Build-Depends:
  debhelper (>= 9),
  dh-systemd,
  dpkg-dev (>= 1.16.1~),
- libssl-dev
+ libssl-dev,
+ dh-apparmor
 Standards-Version: 3.9.6
 Homepage: http://www.yadifa.eu
 Vcs-Git: git://github.com/asciiprod/yadifa.git
@@ -22,6 +23,8 @@ Depends:
  netbase,
  ${misc:Depends},
  ${shlibs:Depends}
+Suggests:
+ apparmor
 Description: Internet Domain Name Server
  ${Description}
  .
