--- a/debian/yadifad.conf
+++ b/debian/yadifad.conf
@@ -28,7 +28,7 @@
         xfrpath                     "/var/lib/yadifa/xfr"
 
         # The version returned by a query to version.yadifa. CH TXT
-        version                     "2.0.5"
+#        version                     "2.0.5"
 
         # Set the maximum UDP packet size.  Cannot be less than 512.  Cannot be
         # more than 65535.  Typical choice is 4096.
