Support client commands prototype from localhost.

--- a/debian/yadifad.conf
+++ b/debian/yadifad.conf
@@ -11,7 +11,10 @@
 
         # The path of the chroot dir, all further paths are relative to this, if chroot is set to on
         chroot_path                 "/var/lib/yadifa"
- 
+
+        # Support client commands prototype from localhost
+        allow-control               localhost
+
         # The path where all the log files will be written
         logpath                     "/var/log/yadifa"
 
@@ -150,11 +153,12 @@
 # Access Control List definitions
 #
 
-#<acl>
+<acl>
 #        transferer  key master-slave
 #        admins      192.0.2.0/24, 2001:db8::74
 #        master      192.0.2.53
-#</acl>
+        localhost    127.0.0.0/8, ::1
+</acl>
 
 #
 # Master domain zone config
