Permit privileged operations from localhost.

--- a/debian/yadifad.conf
+++ b/debian/yadifad.conf
@@ -75,13 +75,13 @@
         allow-query                 any
 
         # dynamic update of a zone
-        allow-update                none
+        allow-update                localhost
 
         # transfer of a zone (AXFR or IXFR)
-        allow-transfer              none
+        allow-transfer              localhost
 
         # notify of a change in the master
-        allow-notify                none
+        allow-notify                localhost
 </main>
 
 #
