--- a/debian/yadifad.conf
+++ b/debian/yadifad.conf
@@ -124,13 +124,13 @@
 
 <loggers>
 #       bundle          debuglevel                          channels
-        database        *                                   database,all
-        dnssec          *                                   dnssec,all
+        database        EMERG,ALERT,CRIT,ERR,WARNING,NOTICE database,all
+        dnssec          EMERG,ALERT,CRIT,ERR,WARNING,NOTICE dnssec,all
         server          *                                   server,all
         statistics      *                                   statistics
-        system          *                                   system,all
-        zone            *                                   zone,all
-        queries         *                                   queries
+        system          EMERG,ALERT,CRIT,ERR,WARNING,NOTICE system,all
+        zone            EMERG,ALERT,CRIT,ERR,WARNING,NOTICE zone,all
+#        queries         *                                   queries
 </loggers>
 
 #
