Switched from autotools-dev to dh-autoreconf as autotools-dev isn't sufficient for packages that use automake and libtool.

--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: net
 Priority: optional
 Maintainer: Markus Schade <markus.schade@gmail.com>
 Build-Depends:
- autotools-dev,
+ dh-autoreconf,
  debhelper (>= 9),
  dh-systemd,
  dpkg-dev (>= 1.16.1~),
