--- a/debian/yadifad.conf
+++ b/debian/yadifad.conf
@@ -68,6 +68,9 @@
         #
         # Rules can be defined on network ranges, TSIG signatures, and ACL rules
 
+        # Support client commands prototype from localhost
+        allow-control               localhost
+
         # simple queries:
         allow-query                 any
 
@@ -155,6 +158,10 @@
 #        admins      192.0.2.0/24, 2001:db8::74
 #        master      192.0.2.53
 #</acl>
+
+<acl>
+         localhost 127.0.0.0/8, ::1
+</acl>
 
 #
 # Master domain zone config
