further reduce logging to production level

--- a/debian/yadifad.conf
+++ b/debian/yadifad.conf
@@ -126,8 +126,8 @@
 #       bundle          debuglevel                          channels
         database        EMERG,ALERT,CRIT,ERR,WARNING,NOTICE database,all
         dnssec          EMERG,ALERT,CRIT,ERR,WARNING,NOTICE dnssec,all
-        server          *                                   server,all
-        statistics      *                                   statistics
+        server          EMERG,ALERT,CRIT,ERR,WARNING,NOTICE server,all
+        statistics      EMERG,ALERT,CRIT,ERR,WARNING,NOTICE statistics
         system          EMERG,ALERT,CRIT,ERR,WARNING,NOTICE system,all
         zone            EMERG,ALERT,CRIT,ERR,WARNING,NOTICE zone,all
 #        queries         *                                   queries
