fix logging for stats

--- a/debian/yadifad.conf
+++ b/debian/yadifad.conf
@@ -127,7 +127,7 @@
         database        EMERG,ALERT,CRIT,ERR,WARNING,NOTICE database,all
         dnssec          EMERG,ALERT,CRIT,ERR,WARNING,NOTICE dnssec,all
         server          EMERG,ALERT,CRIT,ERR,WARNING,NOTICE server,all
-        statistics      EMERG,ALERT,CRIT,ERR,WARNING,NOTICE statistics
+        stats           *                                   statistics
         system          EMERG,ALERT,CRIT,ERR,WARNING,NOTICE system,all
         zone            EMERG,ALERT,CRIT,ERR,WARNING,NOTICE zone,all
 #        queries         *                                   queries
