update default conf with new options add yadifarc manpage as daemon now does not background, change systemd unit to simple

--- a/debian/yadifa.service
+++ b/debian/yadifa.service
@@ -4,7 +4,7 @@ Documentation=man:yadifa(8)
 After=network.target
 
 [Service]
-Type=forking
+Type=simple
 PIDFile=/var/run/yadifa/yadifad.pid
 ExecStart=/usr/sbin/yadifad -c /etc/yadifa/yadifad.conf
 ExecReload=/bin/kill -HUP $MAINPID
