--- a/debian/rules
+++ b/debian/rules
@@ -19,6 +19,9 @@ override_dh_auto_configure:
 override_dh_installinit:
 	dh_installinit -a --no-start
 
+override_dh_installman:
+	dh_installman --language=C
+
 override_dh_gencontrol:
 	for i in $$(sed -n '/^Package:/s/^.* //p' debian/control); do cat debian/vars.in >> debian/$$i.substvars; done
 	cat debian/vars.in >> debian/substvars
