--- a/lib/dnsdb/Makefile.in
+++ b/lib/dnsdb/Makefile.in
@@ -49,11 +49,11 @@
 #
 #      	Makefile.am script
 #
-#	$URL: https://svn.int.eurid.eu/svn/sysdevel/projects/yadifa/tags/release-2.1.0-public/lib/dnsdb/Makefile.am $
+#	$URL: https://svn.int.eurid.eu/svn/sysdevel/projects/yadifa/tags/release-2.1.1-public/lib/dnsdb/Makefile.am $
 #
-#       $Date: 2015-04-20 15:07:41 +0200 (Mon, 20 Apr 2015) $
+#       $Date: 2015-07-14 09:04:32 +0200 (Tue, 14 Jul 2015) $
 #
-#       $Revision: 4962 $
+#       $Revision: 5300 $
 #
 #	$Author: ericdf $
 #
@@ -1583,7 +1583,7 @@ buildinfo.h: config.log
 all: REVISION
 
 REVISION:
-	(svn info 2>/dev/null;if [ $? -ne 0 ];then echo "Revision: 0";fi)|grep Revision:|sed 's/^Revision: *//' > REVISION
+	(svn info 2>/dev/null;if [ $$? -ne 0 ];then echo "Revision: 0";fi)|grep Revision:|sed 's/^Revision: *//' > REVISION
 
 src/avl.c: $(FEATURES)
 
