--- a/lib/dnszone/Makefile.in
+++ b/lib/dnszone/Makefile.in
@@ -49,11 +49,11 @@
 #
 #      	Makefile.am script
 #
-#	$URL: https://svn.int.eurid.eu/svn/sysdevel/projects/yadifa/tags/release-2.1.0-public/lib/dnszone/Makefile.am $
+#	$URL: https://svn.int.eurid.eu/svn/sysdevel/projects/yadifa/tags/release-2.1.1-public/lib/dnszone/Makefile.am $
 #
-#       $Date: 2015-03-06 14:58:47 +0100 (Fri, 06 Mar 2015) $
+#       $Date: 2015-07-14 09:04:32 +0200 (Tue, 14 Jul 2015) $
 #
-#       $Revision: 4756 $
+#       $Revision: 5300 $
 #
 #	$Author: ericdf $
 #
@@ -1217,7 +1217,7 @@ buildinfo.h: config.log
 all: REVISION
 
 REVISION:
-	(svn info 2>/dev/null;if [ $? -ne 0 ];then echo "Revision: 0";fi)|grep Revision:|sed 's/^Revision: *//' > REVISION
+	(svn info 2>/dev/null;if [ $$? -ne 0 ];then echo "Revision: 0";fi)|grep Revision:|sed 's/^Revision: *//' > REVISION
 
 src/dnszone.c: $(FEATURES)
 
