--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -49,9 +49,9 @@
 #
 #      	Makefile.am script
 #
-#	$URL: https://svn.int.eurid.eu/svn/sysdevel/projects/yadifa/tags/release-2.1.1-public/doc/Makefile.am $
+#	$URL: https://svn.int.eurid.eu/svn/sysdevel/projects/yadifa/tags/release-2.1.2-public/doc/Makefile.am $
 #
-#       $Date: 2015-04-28 07:58:08 +0200 (Tue, 28 Apr 2015) $
+#       $Date: 2015-04-28 07:58:08 +0200 (Die, 28 Apr 2015) $
 #
 #       $Revision: 5029 $
 #
@@ -258,6 +258,7 @@ HAS_CC_XC99 = @HAS_CC_XC99@
 HAS_CTRL = @HAS_CTRL@
 HAS_CTRL_DYNAMIC_PROVISIONING = @HAS_CTRL_DYNAMIC_PROVISIONING@
 HAS_DYNUPDATE_SUPPORT = @HAS_DYNUPDATE_SUPPORT@
+HAS_FULL_ASCII7 = @HAS_FULL_ASCII7@
 HAS_LITTLE_ENDIAN = @HAS_LITTLE_ENDIAN@
 HAS_LOGDIR = @HAS_LOGDIR@
 HAS_LOG_PID_ALWAYS_ON = @HAS_LOG_PID_ALWAYS_ON@
