remove dpkg-dev from control remove DH_OPTIONS in rules make default sourceable by sysv init and systemd service file yadifa license is not exactly bsd wording change debian/* license wording to match bsd

--- a/debian/yadifa.service
+++ b/debian/yadifa.service
@@ -5,8 +5,9 @@ After=network.target
 
 [Service]
 Type=simple
+EnvironmentFile=-/etc/default/yadifa
 PIDFile=/var/run/yadifa/yadifad.pid
-ExecStart=/usr/sbin/yadifad -c /etc/yadifa/yadifad.conf
+ExecStart=/usr/sbin/yadifad -c $CONFIG_FILE
 ExecReload=/bin/kill -HUP $MAINPID
 KillMode=process
 
