--- a/debian/rules
+++ b/debian/rules
@@ -3,6 +3,13 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
+#DEB_CONFIGURE_EXTRA_FLAGS :=     \
+#	--enable-rrl	\
+#	--enable-nsid	\
+#	--enable-tools	\
+#	--enable-ctrl	\
+#	--enable-ctrl-dynamic-provisioning
+
 %:
 	dh $@  --with autoreconf --with=systemd
 
@@ -11,7 +18,12 @@ override_dh_clean:
 	rm -f debian/substvars
 
 override_dh_auto_configure:
-	dh_auto_configure -- --enable-rrl --enable-nsid --with-tools --enable-ctrl
+	dh_auto_configure -- \
+		--enable-rrl	\
+		--enable-nsid	\
+		--enable-tools	\
+		--enable-ctrl	\
+		--enable-ctrl-dynamic-provisioning
 
 override_dh_installinit:
 	dh_installinit -a --no-start
